Trying to remove all menus.

--- a/_config.yml
+++ b/_config.yml
@@ -46,10 +46,10 @@ repo_trophies:
 
 navbar_fixed: true
 footer_fixed: true
-search_enabled: true
-socials_in_search: true
-posts_in_search: true
-bib_search: true
+search_enabled: false
+socials_in_search: false
+posts_in_search: false
+bib_search: false
 
 # Dimensions
 max_width: 930px
@@ -143,13 +143,13 @@ newsletter:
 
 collections:
   books:
-    output: true
+    output: false
   news:
     defaults:
       layout: post
-    output: true
+    output: false
   projects:
-    output: true
+    output: false
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
@@ -192,6 +192,12 @@ exclude:
   - vendor
   - _pages/cv.md
   - _pages/news.md
+  - _pages/dropdown.md
+  - _pages/projects.md
+  - _pages/repositories.md
+  - _pages/teaching.md
+  - _pages/publications.md
+  - _pages/about_einstein.md
 keep_files:
   - CNAME
   - .nojekyll
