--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ footer_fixed: true
 search_enabled: false
 socials_in_search: false
 posts_in_search: false
-bib_search: false
+bib_search: true
 
 # Dimensions
 max_width: 930px
@@ -197,7 +197,7 @@ exclude:
   - _pages/repositories.md
   - _pages/teaching.md
   - _pages/publications.md
-  - _pages/about_einstein.md
+  - _pages/profiles.md
 keep_files:
   - CNAME
   - .nojekyll
@@ -270,8 +270,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Lyu]
+  first_name: [Chaoyang]
 
   style: apa
   locale: en
